# TsfPad

./: .clangd  CMakeLists.txt  README.md
src/: DisplayAttribute.cpp  DisplayAttribute.h  TextEditSink.cpp  TextEditor.cpp  TextEditor.h  TextInputCtrl.cpp  TextInputCtrl.h  TextLayout.cpp  TextLayout.h  TextStore.cpp  TextStore.h  TsfPad.cpp
standalone/TsfD2DTextBox/: CMakeLists.txt  README.md
standalone/TsfD2DTextBox/demo/: TsfD2DTextBoxDemo.cpp
standalone/TsfD2DTextBox/include/: TsfD2DTextBox.h
standalone/TsfD2DTextBox/src/: DisplayAttribute.cpp  DisplayAttribute.h  TextContainer.cpp  TextContainer.h  TextEditSink.cpp  TextEditSink.h  TextEditor.cpp  TextEditor.h  TextInputCtrl.cpp  TextInputCtrl.h  TextStore.cpp  TextStore.h  TsfD2DTextBox.cpp  TsfTextServices.cpp  TsfTextServices.h  private.h
